add some featuers

--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -82,7 +82,7 @@
     "Reviews for":"مراجعة من أجل ",
     "Notifications, password":"الإشعارات , كلمة السر",
     "it has been delivred":"تم تسليمها",
-    "Canceled":"ملغي",
+    "Canceled":"تم الالغاء",
     "Order":"طلب",
     "Tracking number":"رقم التعقب",
     "Quantity":"الكمية",
@@ -182,11 +182,12 @@
     "Product Discount value":"قيمة الحسم",
     "Cart Is Empty":"السلة فارغة",
     "Editing Shipping Address":"تعديل عنوان الشحن",
-    "Pending":"قيد الانتظار",
-    "Confirmed":"مؤكدة",
-    "Ready To Ship":"جاهزة للشحن",
-    "On The Way":"في الطريق",
-    "Completed":"مكتملة",
+    "Pending":"قيد التأكيد",
+    "Confirmed":"تم التأكيد ويتم تحضيره",
+    "Ready To Ship": "تم تسليمه لشركة التوصيل",
+    "On The Way":"في الطريق اليك",
+    "Completed":"تم الاستلام من قبلك",
+
     "Sorry, there are no Orders.":"عذراً , لا يوجد طلبيات هنا",
     "Wallet":"المحفظة",
     "Profits":"الأرباح",
@@ -287,7 +288,24 @@
     "Filters":"الفلاتر",
     "Filters by brand":"الفلترة حسب الماركة",
     "If you want help":"إذا كنت تريد المساعدة",
-    "If you do not find the email in your inbox, check your junk mail.":"ملاحظة : إذا لم تتمكن من العثور على البريد الإلكتروني في صندوق الوارد الخاص بك، تحقق من البريد العشوائي."
+    "If you do not find the email in your inbox, check your junk mail.":"ملاحظة : إذا لم تتمكن من العثور على البريد الإلكتروني في صندوق الوارد الخاص بك، تحقق من البريد العشوائي.",
+    "New arrival":"وصل حديثاً",
+    "On Tiktok":"رائج على تيكتوك",
+    "With Qouta":"كمية إضافية",
+    "Plog Description":"وصف المدونة",
+    "Notify me when it is available":"أعلمني عند توفره ",
+    "You will be notified when available.":"سيتم إعلامك عند توفره ",
+    "Free consultations":"استشارات مجانية",
+    "Your suggestion matters to us":"اقتراحك يهمنا",
+    "Write your consultation here":"اكتب استشارتك",
+    "Write your suggestion here":"اكتب اقتراحك",
+    "Sent successfully":"تم الارسال بنجاح",
+    "Our partner stores":"متاجر شركائنا ",
+    "Sorry, there are no suppliers.":"عذراً , لا يوجد متاجر لشركائنا",
+    "Book The Product":"حجز الطلبية",
+    "The product has been successfully booked.":"تم حجز المنتج بنجاح",
+    "reservation":"حجز",
+    "Reservation information":"معلومات الحجز"
     
     
 }
