--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -287,5 +287,22 @@
     "Filters":"Filters",
     "Filters by brand":"Filters by brand",
     "If you want help":"If you want help",
-    "If you do not find the email in your inbox, check your junk mail.":"Note : If you do not find the email in your inbox, check your junk mail."
+    "If you do not find the email in your inbox, check your junk mail.":"Note : If you do not find the email in your inbox, check your junk mail.",
+    "New arrival":"New Arrival",
+    "On Tiktok":"On Tiktok",
+    "With Qouta":"With Qouta",
+    "Plog Description":"Plog Description",
+    "Notify me when it is available":"Notify me when it is available",
+    "You will be notified when available.":"You will be notified when available.",
+    "Free consultations":"Free consultations",
+    "Your suggestion matters to us":"Your suggestion matters to us",
+    "Write your consultation here":"Write your consultation",
+    "Write your suggestion here":"Write your suggestion",
+    "Sent successfully":"Sent successfully",
+    "Our partner stores":"Our partner stores",
+    "Sorry, there are no suppliers.":"Sorry, there are no suppliers.",
+    "Book The Product":"Book The Order",
+    "The product has been successfully booked.":"The product has been successfully booked.",
+    "reservation":"Reservation",
+    "Reservation information":"Reservation information"
 }
